2015-01-02  Hans-Peter Nilsson  <hp@bitrange.com>

	* config.sub: Update from upstream, to 2015-01-01 version.
	* config.guess: Ditto.

2014-12-22  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* MAINTAINERS (RTEMS Ports): Add myself.

2014-12-17  Pierre-Marie de Rodat  <derodat@adacore.com>

	* MAINTAINERS (Write After Approval): Add myself.

2014-12-16  Michael Haubenwallner <michael.haubenwallner@ssi-schaefer.com>

	* MAINTAINERS (Write After Approval): Add myself.

2014-12-15  Thomas Schwinge  <thomas@codesourcery.com>

	* configure.ac (--enable-as-accelerator-for): Don't set
	ENABLE_AS_ACCELERATOR_FOR.  Update all users.
	* configure: Regenerate.

2014-12-13  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/64023
	* Makefile.tpl (EXTRA_TARGET_FLAGS): Set STAGE1_LDFLAGS
	to POSTSTAGE1_LDFLAGS and STAGE1_LIBS to POSTSTAGE1_LIBS.
	Add -B to libstdc++-v3/src/.libs and libstdc++-v3/libsupc++/.libs
	to CXX.
	* Makefile.in: Regenerated.

2014-12-09  Laurynas Biveinis  <laurynas.biveinis@gmail.com>
	    Yury Gribov  <y.gribov@samsung.com>

	* .gitignore: Added .local.vimrc and .lvimrc.
	* Makefile.tpl (vimrc, .lvimrc, .local.vimrc): New targets.
	* Makefile.in: Regenerate.

2014-12-04  Jack Howarth  <howarth@bromo.med.uc.edu>

	* config/isl.m4: Don't pass -DCLOOG_INT_GMP on islinc.
	* configure: Regenerated.

2014-11-27  Bernd Schmidt  <bernds@codesourcery.com>

	* MAINTAINERS (nvptx port): New entry.

2014-11-26  Jan-benedict Glaw  <jbglaw@lug-owl.de>

	* configure: Regenerate.

2014-11-26  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* configure.ac: Merge with Binutils.

2014-11-26  Tobias Burnus  <burnus@net-b.de>

	* Makefile.def: Make more dependent on mpfr, mpc and isl.
	* Makefile.in: Regenerate.

2014-11-24  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* Makefile.def (module=gmp): Work around in-tree gmp configure bug with
	missing flex.
	* Makefile.in: Regenerated.

2014-11-21  Ilya Verbin  <ilya.verbin@intel.com>

	* Makefile.in: Regenerate.
